.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inoffice-deployment
  namespace: inoffice
spec:
  selector:
    matchLabels:
      app: inoffice
  replicas: 1
  template:
    metadata:
      labels:
        app: inoffice
      annotations:
        linkerd.io/inject: enabled
        config.linkerd.io/skip-outbound-ports: '3306'
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: link-bot
          image: ghcr.io/silvercory/inoffice:latest
          ports:
            - containerPort: 80
