.kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: inoffice-service
  namespace: inoffice
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: inoffice
  type: NodePort
