.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inoffice-ingress
  namespace: inoffice
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.inoffice.dank.link
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: inoffice-service
                port:
                  number: 8080
